WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282320
[MediaRecorder] timecode provided in BlobEvent is incorrect
https://bugs.webkit.org/show_bug.cgi?id=282320
Summary
[MediaRecorder] timecode provided in BlobEvent is incorrect
Jean-Yves Avenard [:jya]
Reported
2024-10-29 22:45:23 PDT
The timecode provided in the MediaRecorder's BlobEvent is of the time at which the data was requested. it should be ``` The difference between the timestamp of the first chunk in data and the timestamp of the first chunk in the first BlobEvent produced by this recorder as a DOMHighResTimeStamp [HR-TIME]. Note that the timecode in the first produced BlobEvent does not need to be zero. ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-10-29 22:47:00 PDT
<
rdar://problem/138895100
>
Jean-Yves Avenard [:jya]
Comment 2
2024-11-08 05:37:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36393
EWS
Comment 3
2024-11-11 11:00:37 PST
Committed
286442@main
(ced7f5e2066e): <
https://commits.webkit.org/286442@main
> Reviewed commits have been landed. Closing PR #36393 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug