Source/WebCore/Modules/mediarecorder/MediaRecorder.h
@@ -106,6 +106,8 @@ private:
     enum class TakePrivateRecorder : bool { No, Yes };
     using FetchDataCallback = Function<void(RefPtr<FragmentedSharedBuffer>&&, const String& mimeType, double)>;
     void fetchData(FetchDataCallback&&, TakePrivateRecorder);
+    enum class ReturnDataIfEmpty : bool { No, Yes };
+    ExceptionOr<void> requestDataInternal(ReturnDataIfEmpty);
 
     // MediaStream::Observer
     void didAddTrack(MediaStreamTrackPrivate&) final { handleTrackChange(); }
@@ -130,9 +132,10 @@ private:
     std::unique_ptr<MediaRecorderPrivate> m_private;
     RecordingState m_state { RecordingState::Inactive };
     Vector<Ref<MediaStreamTrackPrivate>> m_tracks;
+    static constexpr unsigned m_mimimumTimeSlice { 100 };
     std::optional<unsigned> m_timeSlice;
     Timer m_timeSliceTimer;
-    
+
     bool m_isActive { true };
     bool m_isFetchingData { false };
     Deque<FetchDataCallback> m_pendingFetchDataTasks;
